--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             margin: 2em 0;
         }
         .adoption-image img {
-            width: 200%; /* Aumentar al doble del tamaño original */
-            max-width: 1200px; /* Ajustar al doble del tamaño máximo original */
+            width: 100%; 
+            max-width: 600px; 
             border-radius: 10px;
         }
         .btn {
